[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://pantanooo.jpg" type="Texture" id=2]
[ext_resource path="res://Escenario.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.509804, 0.513726, 0.862745, 1 )
position = Vector2( 511, 300 )
scale = Vector2( 0.4, 0.42 )
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 529, 561 )

[node name="Timer" type="Timer" parent="."]

[node name="nomnoms" type="Label" parent="."]
margin_left = 12.0
margin_top = 15.0
margin_right = 60.0
margin_bottom = 29.0
text = "Puntos:"

[node name="nomnomsnts" type="Label" parent="."]
margin_left = 14.0
margin_top = 37.0
margin_right = 54.0
margin_bottom = 51.0

[node name="Timer2" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
